--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "npx varlet-cli dev",
+    "dev": "varlet-cli dev",
     "build": "varlet-cli build",
     "preview": "varlet-cli preview",
     "compile": "varlet-cli compile",
@@ -39,12 +39,12 @@
     "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@varlet/cli": "^1.27.20",
+    "@varlet/cli": "2.0.0-alpha.1663742071515",
     "@varlet/eslint-config": "^1.27.20",
     "@varlet/icons": "^1.27.20",
+    "@varlet/shared": "^1.27.20",
     "@varlet/stylelint-config": "^1.27.20",
     "@varlet/touch-emulator": "^1.27.20",
-    "@varlet/shared": "^1.27.20",
     "@vue/test-utils": "2.0.0-rc.6",
     "clipboard": "^2.0.6",
     "eslint": "^7.30.0",
@@ -108,5 +108,8 @@
     "umd",
     "highlight",
     "types"
-  ]
+  ],
+  "dependencies": {
+    "@varlet/ui": "^1.27.20"
+  }
 }
