--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
   "name": "varlet-ute",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Varlet UI theme editing tool",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "typings": "types/index.d.ts",
-  "vetur": {
-    "tags": "highlight/tags.json",
-    "attributes": "highlight/attributes.json"
-  },
-  "web-types": "highlight/web-types.json",
   "keywords": [
     "Vue",
     "UI"
   ],
   "license": "MIT",
-  "sideEffects": [
-    "es/**/style/*",
-    "lib/**/style/*",
-    "*.css",
-    "*.less"
-  ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
     "dev": "varlet-cli dev",
     "build": "varlet-cli build",
     "preview": "varlet-cli preview",
@@ -35,24 +22,24 @@
     "test:watchAll": "varlet-cli jest -wa",
     "create": "varlet-cli create"
   },
-  "peerDependencies": {
-    "vue": "^3.2.0"
+  "dependencies": {
+    "@varlet/ui": "^2.0.0-alpha.1664036886956"
   },
   "devDependencies": {
-    "@varlet/cli": "2.0.0-alpha.1663742071515",
-    "@varlet/eslint-config": "^1.27.20",
-    "@varlet/icons": "^1.27.20",
-    "@varlet/shared": "^1.27.20",
-    "@varlet/stylelint-config": "^1.27.20",
-    "@varlet/touch-emulator": "^1.27.20",
-    "@vue/test-utils": "2.0.0-rc.6",
+    "@varlet/cli": "^2.0.0-alpha.1664036886956",
+    "@varlet/eslint-config": "^2.0.0-alpha.1664036886956",
+    "@varlet/icons": "^2.0.0-alpha.1664036886956",
+    "@varlet/stylelint-config": "^2.0.0-alpha.1664036886956",
+    "@varlet/touch-emulator": "^2.0.0-alpha.1664036886956",
+    "@varlet/shared": "^2.0.0-alpha.1664036886956",
+    "@vue/test-utils": "^2.0.2",
     "clipboard": "^2.0.6",
     "eslint": "^7.30.0",
     "lint-staged": "^10.5.0",
     "live-server": "^1.2.1",
     "lodash-es": "^4.17.21",
     "prettier": "^2.3.2",
-    "simple-git-hooks": "^2.7.0",
+    "simple-git-hooks": "^2.8.0",
     "stylelint": "^13.13.1",
     "typescript": "^4.4.4",
     "vue": "3.2.25",
@@ -70,12 +57,8 @@
   "eslintConfig": {
     "root": true,
     "ignorePatterns": [
-      "lib/**",
-      "es/**",
-      "umd/**",
       "site/**",
       "public/**",
-      "src/*/__tests__/**",
       ".varlet/**"
     ],
     "extends": [
@@ -87,13 +70,8 @@
       "@varlet/stylelint-config"
     ],
     "ignoreFiles": [
-      "lib/**",
-      "es/**",
-      "umd/**",
       "site/**",
-      "coverage/**",
       "public/**",
-      "highlight/**",
       ".varlet/**"
     ]
   },
@@ -101,15 +79,8 @@
     "Chrome >= 54",
     "iOS >= 10"
   ],
-  "packageManager": "pnpm@6.24.3",
-  "files": [
-    "es",
-    "lib",
-    "umd",
-    "highlight",
-    "types"
-  ],
-  "dependencies": {
-    "@varlet/ui": "^1.27.20"
+  "packageManager": "pnpm@7.9.0",
+  "engines": {
+    "pnpm": ">=7.9"
   }
 }
