--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,13 +21,11 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile --ignore-scripts && node scripts/bootstrap.mjs
+        run: pnpm install
 
       - name: Run linter
         run: pnpm lint
 
-      - name: Run test cases
-        run: cd packages/varlet-ui && pnpm test
 
       - name: Report coverage to Codecov
         uses: codecov/codecov-action@v1
