--- a/.github/workflows/deploy-playground-sync-gitee.yaml
+++ b/.github/workflows/deploy-playground-sync-gitee.yaml
@@ -22,6 +22,9 @@ jobs:
           node-version: '16'
           cache: 'pnpm'
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Build ute
         run: pnpm build
 
