--- a/.github/workflows/deploy-playground-sync-gitee.yaml
+++ b/.github/workflows/deploy-playground-sync-gitee.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-page
-          folder: varlet-ui-theme
+          folder: site
 
       - name: Sync to Gitee
         uses: wearerequired/git-mirror-action@master
