--- a/.github/workflows/deploy-playground-sync-gitee.yaml
+++ b/.github/workflows/deploy-playground-sync-gitee.yaml
@@ -39,5 +39,5 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
-          source-repo: git@github.com:varletjs/varlet.git
-          destination-repo: git@gitee.com:varlet/varlet-ui-theme.git
+          source-repo: git@github.com:varletjs/varlet-ute.git
+          destination-repo: git@gitee.com:varlet/varlet-ute.git
