--- a/.github/workflows/deploy-playground-sync-gitee.yaml
+++ b/.github/workflows/deploy-playground-sync-gitee.yaml
@@ -40,4 +40,4 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
           source-repo: git@github.com:varletjs/varlet-ute.git
-          destination-repo: git@gitee.com:varlet/varlet-ute.git
+          destination-repo: git@gitee.com:vike123/varlet-ute.git
