--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "create": "varlet-cli create"
   },
   "dependencies": {
-    "@varlet/ui": "^2.0.0-alpha.1664036886956"
+    "@varlet/ui": "^2.0.0"
   },
   "devDependencies": {
-    "@varlet/cli": "^2.0.0-alpha.1664036886956",
-    "@varlet/eslint-config": "^2.0.0-alpha.1664036886956",
-    "@varlet/icons": "^2.0.0-alpha.1664036886956",
-    "@varlet/stylelint-config": "^2.0.0-alpha.1664036886956",
-    "@varlet/touch-emulator": "^2.0.0-alpha.1664036886956",
-    "@varlet/shared": "^2.0.0-alpha.1664036886956",
+    "@varlet/cli": "^2.0.0",
+    "@varlet/eslint-config": "^2.0.0",
+    "@varlet/icons": "^2.0.0",
+    "@varlet/stylelint-config": "^2.0.0",
+    "@varlet/touch-emulator": "^2.0.0",
+    "@varlet/shared": "^2.0.0",
     "@vue/test-utils": "^2.0.2",
     "clipboard": "^2.0.6",
     "eslint": "^7.30.0",
