--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "create": "varlet-cli create"
   },
   "dependencies": {
-    "@varlet/ui": "^2.6.1",
+    "@varlet/ui": "^2.8.3",
     "@types/file-saver": "^2.0.5",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1"
   },
   "devDependencies": {
-    "@varlet/cli": "^2.0.3",
-    "@varlet/eslint-config": "^2.0.3",
-    "@varlet/icons": "^2.0.3",
-    "@varlet/shared": "^2.0.3",
-    "@varlet/stylelint-config": "^2.0.3",
-    "@varlet/touch-emulator": "^2.0.3",
+    "@varlet/cli": "^2.8.4-alpha.1676992435486",
+    "@varlet/eslint-config": "^2.8.3",
+    "@varlet/icons": "^2.8.4-alpha.1676992435486",
+    "@varlet/shared": "^2.8.3",
+    "@varlet/stylelint-config": "^2.8.3",
+    "@varlet/touch-emulator": "^2.8.4-alpha.1676992435486",
     "@vue/test-utils": "^2.0.2",
     "clipboard": "^2.0.6",
     "eslint": "^7.30.0",
